# oslab

./: .gitignore  1a.cpp  CMakeLists.txt  template.cpp
1/: 1b.cpp  Ass1_51_1a.cpp  Ass1_51_1b.cpp  Makefile
2/: Ass2_51.cpp  Ass2a_51.cpp
3/: Ass3a_51.cpp  Ass3b_51.cpp  plot3a.py
4/: Ass4_51.cpp  mrfs.cpp  mrfs.h
5/: Ass5_51.cpp
